[gd_scene load_steps=5 format=3 uid="uid://c2kl8jd4je6la"]

[ext_resource type="Texture2D" uid="uid://c8qurlnc1gd6d" path="res://assets/sprites/collectibles/tileRed_60.png" id="1_j5gfr"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_xwss0"]
[ext_resource type="LabelSettings" uid="uid://dxunrvlgh4sls" path="res://assets/48_title.tres" id="2_jeu48"]
[ext_resource type="Texture2D" uid="uid://dxu5do0q1p8h1" path="res://assets/sprites/collectibles/coin_11.png" id="3_g7la5"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwss0")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameTimeText" type="Label" parent="MC/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "00"
label_settings = ExtResource("2_jeu48")

[node name="HeartsContainer" type="HBoxContainer" parent="MC/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 48

[node name="HBoxHeart" type="HBoxContainer" parent="MC/VBoxContainer/HeartsContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeartIcon" type="TextureRect" parent="MC/VBoxContainer/HeartsContainer/HBoxHeart"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_j5gfr")
expand_mode = 1

[node name="HeartText" type="Label" parent="MC/VBoxContainer/HeartsContainer/HBoxHeart"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "00"
label_settings = ExtResource("2_jeu48")

[node name="HBoxCoin" type="HBoxContainer" parent="MC/VBoxContainer/HeartsContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="CoinText" type="Label" parent="MC/VBoxContainer/HeartsContainer/HBoxCoin"]
unique_name_in_owner = true
layout_mode = 2
text = "00"
label_settings = ExtResource("2_jeu48")

[node name="CoinIcon" type="TextureRect" parent="MC/VBoxContainer/HeartsContainer/HBoxCoin"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
texture = ExtResource("3_g7la5")
expand_mode = 1
